--- a/index.html
+++ b/index.html
@@ -2,4 +2,6 @@
 welcome
 
 this is my work in progress website, thanks for stopping by.
+
+<a rel="me" href="https://mastodon.gamedev.place/@raccoonformality">Mastodon</a>
 </html>
