--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
-welcome
-
-this is my work in progress website, thanks for stopping by.
-
+  <h1>welcome</h1>
+<br>
+  <h3>this is my work in progress website, thanks for stopping by.</h3>
+<br>
 <a rel="me" href="https://mastodon.gamedev.place/@raccoonformality">Mastodon</a>
 </html>
