--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
-  <h1>welcome</h1>
-<br>
-  <h3>this is my work in progress website, thanks for stopping by.</h3>
-<br>
+<body>
+  <div class="NamePlate">
+    <font>Raccoon Formality</font>
+  </div>
 <a rel="me" href="https://mastodon.gamedev.place/@raccoonformality">Mastodon</a>
+</body>
 </html>
