--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     }
     .game {
       width: 100%;
+      height: fit-content;
+      float:left;
     }
     .game_image {
       width:fit-content;
@@ -62,7 +64,6 @@
       <span class="game_blurb">Have you ever wanted to send out coffee to angry, caffeine addict doggo men with swords? Want to do that to some lofi hip-hop music? Well, I've made the game for you. So chill out, grab some coffee, and set the game to fullscreen for the best experience! On mobile, there's a white square anchor to aim so you don't have to reach to the top of your screen on a big phone. Have a great rest of your day! :)</span>
       </div>
     </div>
-    
 
     <div class="game bonkers">
       <div class="game_image">
