--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     }
     .game_title {
       color: white;
-      font-size: 24pt;
+      font-size: xx-large;
       display:inline-block;
       margin-bottom: 10px;
     }
     .game_blurb {
       top: 50px;
       color: white;
-      font-size: 16pt;
+      font-size: large;
     }
     img {
       width: 315px;
