--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 
 <html>
+
+<head>
   <style>
     html{
       background-color: black;
@@ -11,6 +13,7 @@
     .NamePlate {
       width: 100%;
       height: 50%;
+      min-width: 666px;
       background-image: url("image.jpg");
       background-size: cover;
       background-position: 50% 50%, center;
@@ -44,15 +47,21 @@
       margin-left: 335;
       width:fit-content;
     }
+    .game_title a {
+      color: yellow;
+    }
     .game_title {
       color: white;
       font-size: xx-large;
       display:inline-block;
+      min-width: 300px;
       margin-bottom: 10px;
     }
+    
     .game_blurb {
       top: 50px;
       color: white;
+      min-width: 300px;
       font-size: large;
     }
     img {
@@ -70,7 +79,12 @@
       bottom: 8px;
       background-color: #ffffff;
     }
+    .footer a {
+      color: black;
+    }
   </style>
+</head>
+
 <body>
   <div class="NamePlate">
     <div class="title">Raccoon Formality</div>
