--- a/index.html
+++ b/index.html
@@ -29,14 +29,15 @@
       transform: translateY(-50%);
     }
     .game_wrapper {
-      width: 80%;
+      width: 90%;
       height: auto;
-      margin-left:10%;
+      margin-left:5%;
     }
     .game {
       width: 100%;
       height: fit-content;
       float:left;
+      margin-top: 20px;
     }
     .game_image {
       width:fit-content;
@@ -54,14 +55,14 @@
       color: white;
       font-size: xx-large;
       display:inline-block;
-      min-width: 300px;
+      min-width: 360px;
       margin-bottom: 10px;
     }
     
     .game_blurb {
       top: 50px;
       color: white;
-      min-width: 300px;
+      min-width: 360px;
       font-size: large;
     }
     img {
@@ -77,10 +78,12 @@
       clear: left;
       position: sticky;
       bottom: 8px;
-      background-color: #ffffff;
+      float: right;
+      text-align: right;
+      color: white;
     }
     .footer a {
-      color: black;
+      color: yellow;
     }
   </style>
 </head>
@@ -150,7 +153,8 @@
   </div>
   <div class="footer">
   <footer>
-    <a rel="me" href="https://mastodon.gamedev.place/@raccoonformality">Mastodon</a> • <a rel="me" href="https://raccoon-formality.itch.io/">itch</a> 
+    <a rel="me" href="https://mastodon.gamedev.place/@raccoonformality">Mastodon</a> <<br>
+    <a rel="me" href="https://raccoon-formality.itch.io/">itch</a> <
   </footer>
 </div>
 </body>
