--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 
 <head>
   <style>
+    @font-face {
+      font-family: 'Roboto';
+      src: url('fonts/Roboto-Regular.ttf');
+    }
+
     html{
       background-color: black;
+      font-family: 'Roboto';
     }
     html, body, div {
       margin: 0;
@@ -22,7 +28,7 @@
     }
     .title {
       text-align: center;
-      font-size: 100pt;
+      font-size: 86pt;
       color: white;
       position: relative;
       top: 50%;
