--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
   <style>
     @font-face {
       font-family: 'Roboto';
-      src: url('fonts/Roboto-Regular.ttf');
+      src: url('fonts/Roboto/Roboto-Regular.ttf');
+    }
+
+    @font-face {
+      font-family: 'IBM Plex Mono';
+      src: url('fonts/IBM_Plex_Mono/IBMPlexMono-Regular.ttf');
     }
 
     html{
       background-color: black;
-      font-family: 'Roboto';
+      font-family: 'roboto';
     }
     html, body, div {
       margin: 0;
       padding: 0;
     }
     .NamePlate {
+      letter-spacing: 0.4rem;
       width: 100%;
       height: 50%;
       min-width: 666px;
