added oldest game to list

--- a/index.html
+++ b/index.html
@@ -162,6 +162,15 @@
       <span class="game_title"><a href="https://raccoon-formality.itch.io/escape-the-date" target="_blank" rel="noopener noreferrer">Escape The Date</a></span>
     </div>
     </div>
+
+    <div class="game slime_jumper">
+      <div class="game_image">
+      <img src="images/slime_jumper.png">
+      </div>
+      <div class="game_text">
+      <span class="game_title"><a href="https://raccoon-formality.itch.io/slime-jumper" target="_blank" rel="noopener noreferrer">Slime Jumper</a></span>
+    </div>
+    </div>
   </div>
   <div class="footer">
   <footer>
