--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
   </div>
   <div class="footer">
   <footer>
-    <a rel="me" href="https://mastodon.gamedev.place/@raccoonformality">Mastodon</a> <br>
-    <a rel="me" href="https://raccoon-formality.itch.io/">itch</a> <br>
-    <a rel="me" href="https://github.com/Raccoon-Formality">GitHub</a>
+    <a rel="me" href="https://mastodon.gamedev.place/@raccoonformality">Mastodon</a> <<br>
+    <a rel="me" href="https://raccoon-formality.itch.io/">itch</a> <<br>
+    <a rel="me" href="https://github.com/Raccoon-Formality">GitHub</a> <
   </footer>
 </div>
 </body>
