--- a/index.html
+++ b/index.html
@@ -213,9 +213,9 @@
 
   <div class="footer">
   <footer>
-    <a rel="me" href="https://mastodon.gamedev.place/@raccoonformality">Mastodon</a> <<br>
-    <a rel="me" href="https://raccoon-formality.itch.io/">itch</a> <<br>
-    <a rel="me" href="https://github.com/Raccoon-Formality">GitHub</a> <
+    <a rel="me" href="https://mastodon.gamedev.place/@raccoonformality">Mastodon</a> <br>
+    <a rel="me" href="https://raccoon-formality.itch.io/">itch</a> <br>
+    <a rel="me" href="https://github.com/Raccoon-Formality">GitHub</a>
   </footer>
 </div>
 </body>
