added a blog post

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <html>
 
 <head>
+  
+  <link rel="icon" type="image/jpg" href="images/racc.jpg"/>
+
   <style>
     @font-face {
       font-family: 'Roboto';
@@ -90,7 +93,7 @@
 
     .blog_holder {
       float: center;
-      width: 50%;
+      width: 55%;
       margin-left: 20%;
     }
     .blog_holder li{
@@ -131,7 +134,7 @@
   <div class="blog_holder">
     <h1>Blog archive:</h1>
   <ul>
-    <li>1/30/2023 - <a href="pages/blog/1-30-2023/index.html">i'm gay</a><span style="float:right;">☭</span></li>
+    <li>1/30/2023 - <a href="pages/blog/1-30-2023/index.html">Creating a blog!</a><span style="float:right;">general | 🦝</span></li>
 
   </ul>
   </div>
