--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
 
 <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EEE3T13NGB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EEE3T13NGB');
+</script>
   
   <link rel="icon" type="image/jpg" href="images/racc.jpg"/>
 
@@ -132,6 +141,8 @@
 
   </style>
 </head>
+
+
 
 <body>
   <div class="NamePlate">
