--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
   <div class="blog_holder">
     <h1>Blog archive:</h1>
   <ul>
+    <li>1/30/2023 - <a href="pages/blog/1-31-2023/political-awakening/index.html">Political Awakening</a><span style="float:right;">politics | ☭</span></li>
     <li>1/30/2023 - <a href="pages/blog/1-30-2023/index.html">Creating a blog!</a><span style="float:right;">general | 🦝</span></li>
 
   </ul>
