--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
+    
+    <link rel="icon" type="image/jpg" href="images/racc.jpg"/>
     <title>Raccoon Formality</title>
 
     <!-- Bootstrap core CSS -->
