--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="about/">About</a></li>
+            <li><a href="#services">Blog</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
@@ -60,9 +60,6 @@
           <p>Gay furry visual novel for the Panic Playdate handheld.</p>
         </div>
 
-      </div>
-      <div class="row">
-
         <div class="col-md-4 portfolio-item">
           <a href="https://raccoon-formality.itch.io/subby-v-squid"><img class="img-responsive" src="images/subby_v_squid.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/subby-v-squid">Subby V. Squid</a></h3>
@@ -75,14 +72,14 @@
           <p>Simple breakout clone I made to learn the Playdate SDK and get use to it in preparation for the PlayJam.</p>
         </div>
 
+      </div>
+      <div class="row">
+
         <div class="col-md-4 portfolio-item">
           <a href="https://raccoon-formality.itch.io/last-chance"><img class="img-responsive" src="images/last_chance.gif" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/last-chance">Last Chance</a></h3>
           <p>Short game made for the Bullet Hell Game Jam 2023.</p>
         </div>
-
-      </div>
-      <div class="row">
 
         <div class="col-md-4 portfolio-item">
           <a href="https://raccoon-formality.itch.io/waterlocket"><img class="img-responsive" src="images/waterlocket.png" width="700px"></a>
@@ -96,14 +93,14 @@
           <p>You must go to a nearby village to get everything you can.</p>
         </div>
 
+      </div>
+      <div class="row">
+
         <div class="col-md-4 portfolio-item">
           <a href="https://raccoon-formality.itch.io/get-your-coffee"><img class="img-responsive" src="images/get_your_coffee.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/get-your-coffee">Get Your Coffee</a></h3>
           <p>Get your coffee.</p>
         </div>
-
-      </div>
-      <div class="row">
 
         <div class="col-md-4 portfolio-item">
           <a href="https://raccoon-formality.itch.io/bonkers"><img class="img-responsive" src="images/bonkers.png" width="700px"></a>
@@ -117,14 +114,14 @@
           <p>Your love means nothing and there are no secrets.</p>
         </div>
 
+      </div>
+      <div class="row">
+
         <div class="col-md-4 portfolio-item">
           <a href="https://raccoon-formality.itch.io/glass-half-full"><img class="img-responsive" src="images/glass_half_full.gif" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/glass-half-full">Glass Half Full</a></h3>
           <p>A short romance story about two men on a business trip.</p>
         </div>
-
-      </div>
-        <div class="row">
 
         <div class="col-md-4 portfolio-item">
           <a href="https://raccoon-formality.itch.io/angry-crab"><img class="img-responsive" src="images/angry_crab.png" width="700px"></a>
@@ -137,6 +134,9 @@
           <h3><a href="https://raccoon-formality.itch.io/escape-the-date">Escape The Date</a></h3>
           <p>A bullet hell dating sim.</p>
         </div>
+
+      </div>
+        <div class="row">
 
         <div class="col-md-4 portfolio-item">
           <a href="https://raccoon-formality.itch.io/slime-jumper"><img class="img-responsive" src="images/slime_jumper.png" width="700px"></a>
