--- a/index.html
+++ b/index.html
@@ -35,14 +35,20 @@
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
             <li><a href="about/">About</a></li>
-            <li><a href="#services">Blog</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="blog/">Blog</a></li>
+            <li><a href="">Contact</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container -->
     </nav>
 
     <div class="container">
+
+      <div class="row">
+        <div class="col-lg-12">
+        <a rel="me" href="https://peoplemaking.games/@RaccoonFormality"><h3>Mastodon</h3></a>
+      </div>
+      </div>
 
       <div class="row">
 
@@ -54,91 +60,88 @@
 
       <div class="row">
 
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/noodles-and-love"><img class="img-responsive" src="images/noodles_and_love.gif" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/noodles-and-love">Noodles & Love</a></h3>
           <p>Gay furry visual novel for the Panic Playdate handheld.</p>
         </div>
 
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/subby-v-squid"><img class="img-responsive" src="images/subby_v_squid.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/subby-v-squid">Subby V. Squid</a></h3>
           <p>Simple game I made for the PlayJam.</p>
         </div>
 
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/crankout"><img class="img-responsive" src="images/crankout.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/crankout">CrankOut</a></h3>
           <p>Simple breakout clone I made to learn the Playdate SDK and get use to it in preparation for the PlayJam.</p>
         </div>
 
-      </div>
-      <div class="row">
-
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/last-chance"><img class="img-responsive" src="images/last_chance.gif" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/last-chance">Last Chance</a></h3>
           <p>Short game made for the Bullet Hell Game Jam 2023.</p>
         </div>
 
-        <div class="col-md-4 portfolio-item">
+      </div>
+      <div class="row">
+
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/waterlocket"><img class="img-responsive" src="images/waterlocket.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/waterlocket">Waterlocket</a></h3>
           <p>A short game demo I made to learn the complexities of 3D gamedev.</p>
         </div>
 
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/void-in-capital"><img class="img-responsive" src="images/void_in_capital.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/void-in-capital">Void In Capital</a></h3>
           <p>You must go to a nearby village to get everything you can.</p>
         </div>
 
-      </div>
-      <div class="row">
-
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/get-your-coffee"><img class="img-responsive" src="images/get_your_coffee.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/get-your-coffee">Get Your Coffee</a></h3>
           <p>Get your coffee.</p>
         </div>
 
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/bonkers"><img class="img-responsive" src="images/bonkers.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/bonkers">Bonkers</a></h3>
           <p>I made this game in around 2 hours because I was bored.</p>
         </div>
 
-        <div class="col-md-4 portfolio-item">
+      </div>
+      <div class="row">
+
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/need-not-you"><img class="img-responsive" src="images/need_not_you.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/need-not-you">Need Not You</a></h3>
           <p>Your love means nothing and there are no secrets.</p>
         </div>
 
-      </div>
-      <div class="row">
-
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/glass-half-full"><img class="img-responsive" src="images/glass_half_full.gif" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/glass-half-full">Glass Half Full</a></h3>
           <p>A short romance story about two men on a business trip.</p>
         </div>
 
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/angry-crab"><img class="img-responsive" src="images/angry_crab.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/angry-crab">Angry Crab</a></h3>
           <p>I made this game because I was angry.</p>
         </div>
 
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/escape-the-date"><img class="img-responsive" src="images/escape_the_date.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/escape-the-date">Escape The Date</a></h3>
           <p>A bullet hell dating sim.</p>
         </div>
 
       </div>
-        <div class="row">
+      <div class="row">
 
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/slime-jumper"><img class="img-responsive" src="images/slime_jumper.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/slime-jumper">Slime Jumper</a></h3>
           <p>My first 2d platformer and I couldn't be prouder.</p>
@@ -173,7 +176,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>Copyright &copy; Company <span id="getCurrentDate"></span></p>
+            <p>Copyright &copy; Raccoon Formality <span id="getCurrentDate"></span></p>
           </div>
         </div>
       </footer>
