--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="">Raccoon Formality</a>
+          <a class="navbar-brand" href="">Home</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -44,10 +44,38 @@
 
     <div class="container">
 
+
       <div class="row">
+
         <div class="col-lg-12">
-        <a rel="me" href="https://peoplemaking.games/@RaccoonFormality"><h3>Mastodon</h3></a>
+          <h1 class="page-header">Raccoon Formality <small></small></h1>
+        </div>
       </div>
+
+      <div class="row">
+
+        <div class="col-md-8">
+          <img class="img-responsive" style="width: 750px; height: 500px; object-fit: cover; object-position: 0% 0%;" src="images/biz_racc.png">
+        </div>
+
+        <div class="col-md-4">
+          <h3>What is this?</h3>
+          <p>Hello, my name is Matthew and I have been making games regularly since March 2022 and I am determined to make this hobby of mine something big.</p>
+          <h3>Links</h3>
+          <ul>
+            <li><a rel="me" href="https://peoplemaking.games/@RaccoonFormality">Mastodon</a></li>
+            <li><a rel="me" href="https://raccoon-formality.itch.io/">Games</a></li>
+            <li><a rel="me" href="https://www.youtube.com/@raccoon-formality">Youtube</a></li>
+            <li><a rel="me" href="https://www.tiktok.com/@RaccoonFormality">TikTok</a></li>
+            <li><a rel="me" href="https://retrospring.net/@Raccoon">Ask Me Anything</a></li>
+          </ul>
+          <h3>Give me money</h3>
+          <ul>
+            <li><a rel="me" href="https://ko-fi.com/raccoonformality">Ko-Fi</a></li>
+            <li><a rel="me" href="https://www.patreon.com/RaccoonFormality">Patreon</a></li>
+          </ul>
+        </div>
+
       </div>
 
       <div class="row">
