--- a/games/index.html
+++ b/games/index.html
@@ -28,12 +28,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a  href=""><img style="max-height: 50px;" src="images/biz_racc_crop.png"></a>
+          <a  href="https://raccoon-formality.github.io"><img style="max-height: 50px;" src="images/biz_racc_crop.png"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
+            
             <li><a href="games/">Games</a></li>
             <li><a href="about/">About</a></li>
             <li><a href="blog/">Blog</a></li>
@@ -44,44 +45,10 @@
 
     <div class="container">
 
-
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">Raccoon Formality <small></small></h1>
-        </div>
-      </div>
-
-      <div class="row">
-
-        <div class="col-md-8">
-          <img class="img-responsive" style="width: 750px; height: 500px; object-fit: cover; object-position: 0% 0%;" src="images/promo.gif">
-        </div>
-
-        <div class="col-md-4">
-          <h3>What is this?</h3>
-          <p>Hello, my name is Matthew and I have been making games regularly since March 2022 and I am determined to make this hobby of mine something big.</p>
-          <h3>Links</h3>
-          <ul>
-            <li><a rel="me" href="https://peoplemaking.games/@RaccoonFormality">Mastodon</a></li>
-            <li><a rel="me" href="https://raccoon-formality.itch.io/">Games</a></li>
-            <li><a rel="me" href="https://www.youtube.com/@raccoon-formality">Youtube</a></li>
-            <li><a rel="me" href="https://www.tiktok.com/@RaccoonFormality">TikTok</a></li>
-            <li><a rel="me" href="https://retrospring.net/@Raccoon">Ask Me Anything</a></li>
-          </ul>
-          <h3>Give me money</h3>
-          <ul>
-            <li><a rel="me" href="https://ko-fi.com/raccoonformality">Ko-Fi</a></li>
-            <li><a rel="me" href="https://www.patreon.com/RaccoonFormality">Patreon</a></li>
-          </ul>
-        </div>
-
-      </div>
-
-      <div class="row">
-
-        <div class="col-lg-12">
-          <h1 class="page-header">Featured Games <small></small></h1>
+          <h1 class="page-header">Games <small></small></h1>
         </div>
 
       </div>
@@ -95,10 +62,52 @@
         </div>
 
         <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/subby-v-squid"><img class="img-responsive" src="images/subby_v_squid.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/subby-v-squid">Subby V. Squid</a></h3>
+          <p>Simple game I made for the PlayJam.</p>
+        </div>
+
+        <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/crankout"><img class="img-responsive" src="images/crankout.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/crankout">CrankOut</a></h3>
+          <p>Simple breakout clone I made to learn the Playdate SDK and get use to it in preparation for the PlayJam.</p>
+        </div>
+
+        <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/last-chance"><img class="img-responsive" src="images/last_chance.gif" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/last-chance">Last Chance</a></h3>
+          <p>Short game made for the Bullet Hell Game Jam 2023.</p>
+        </div>
+
+      </div>
+      <div class="row">
+
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/waterlocket"><img class="img-responsive" src="images/waterlocket.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/waterlocket">Waterlocket</a></h3>
           <p>A short game demo I made to learn the complexities of 3D gamedev.</p>
         </div>
+
+        <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/void-in-capital"><img class="img-responsive" src="images/void_in_capital.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/void-in-capital">Void In Capital</a></h3>
+          <p>You must go to a nearby village to get everything you can.</p>
+        </div>
+
+        <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/get-your-coffee"><img class="img-responsive" src="images/get_your_coffee.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/get-your-coffee">Get Your Coffee</a></h3>
+          <p>Get your coffee.</p>
+        </div>
+
+        <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/bonkers"><img class="img-responsive" src="images/bonkers.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/bonkers">Bonkers</a></h3>
+          <p>I made this game in around 2 hours because I was bored.</p>
+        </div>
+
+      </div>
+      <div class="row">
 
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/need-not-you"><img class="img-responsive" src="images/need_not_you.png" width="700px"></a>
@@ -110,6 +119,27 @@
           <a href="https://raccoon-formality.itch.io/glass-half-full"><img class="img-responsive" src="images/glass_half_full.gif" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/glass-half-full">Glass Half Full</a></h3>
           <p>A short romance story about two men on a business trip.</p>
+        </div>
+
+        <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/angry-crab"><img class="img-responsive" src="images/angry_crab.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/angry-crab">Angry Crab</a></h3>
+          <p>I made this game because I was angry.</p>
+        </div>
+
+        <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/escape-the-date"><img class="img-responsive" src="images/escape_the_date.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/escape-the-date">Escape The Date</a></h3>
+          <p>A bullet hell dating sim.</p>
+        </div>
+
+      </div>
+      <div class="row">
+
+        <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/slime-jumper"><img class="img-responsive" src="images/slime_jumper.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/slime-jumper">Slime Jumper</a></h3>
+          <p>My first 2d platformer and I couldn't be prouder.</p>
         </div>
 
       </div>
