--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="row">
 
         <div class="col-md-8">
-          <img class="img-responsive" style="width: 750px; height: 500px; object-fit: cover; object-position: 0% 0%;" src="images/promo.gif">
+          <img class="img-responsive" style="width: 750px; max-height: 500px; object-fit: cover; object-position: 0% 0%;" src="images/promo.gif">
         </div>
 
         <div class="col-md-4">
