--- a/games/index.html
+++ b/games/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <meta property="og:image" content="images/racc.jpg">
+    <meta property="og:image" content="https://raccoonformality.com/images/racc.jpg">
 
     
     <link rel="icon" type="image/jpg" href="images/racc.jpg"/>
