--- a/games/index.html
+++ b/games/index.html
@@ -7,11 +7,14 @@
     <link rel="icon" type="image/jpg" href="images/racc.jpg"/>
     <title>Raccoon Formality</title>
 
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+  name="Raccoon Formality"
+  content="Game developer" />
+
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Gamedev">
     <meta name="author" content="Raccoon Formality">
-    <meta property="og:image" content="https://raccoonformality.com/images/racc.jpg">
+    <meta property="og:image" content="https://raccoonformality.com/images/racc.jpg">-->
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
