--- a/games/index.html
+++ b/games/index.html
@@ -5,22 +5,30 @@
 
     
     <link rel="icon" type="image/jpg" href="images/racc.jpg"/>
-    <title>Raccoon Formality</title>
+    
+<!-- HTML Meta Tags -->
+<title>Raccoon Formality</title>
+<meta name="description" content="game developer">
 
-    <meta
-  name="Raccoon Formality"
-  content="Game developer" />
+<!-- Google / Search Engine Tags -->
+<meta itemprop="name" content="Raccoon Formality">
+<meta itemprop="description" content="game developer">
+<meta itemprop="image" content="https://raccoonformality.com/images/racc.jpg">
 
-    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Gamedev">
-    <meta name="author" content="Raccoon Formality">
-    <meta property="og:image" content="https://raccoonformality.com/images/racc.jpg">-->
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://raccoonformality.com">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Raccoon Formality">
+<meta property="og:description" content="game developer">
+<meta property="og:image" content="https://raccoonformality.com/images/racc.jpg">
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.css" rel="stylesheet">
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Raccoon Formality">
+<meta name="twitter:description" content="game developer">
+<meta name="twitter:image" content="https://raccoonformality.com/images/racc.jpg">
 
-    <!-- Custom CSS for the '3 Col Portfolio' Template -->
-    <link href="css/3-col-portfolio.css" rel="stylesheet">
+<!-- Meta Tags Generated via http://heymeta.com -->
   </head>
 
   <body>
