--- a/games/index.html
+++ b/games/index.html
@@ -5,7 +5,7 @@
 
     
     <link rel="icon" type="image/jpg" href="images/racc.jpg"/>
-    
+
 <!-- HTML Meta Tags -->
 <title>Raccoon Formality</title>
 <meta name="description" content="game developer">
@@ -29,6 +29,12 @@
 <meta name="twitter:image" content="https://raccoonformality.com/images/racc.jpg">
 
 <!-- Meta Tags Generated via http://heymeta.com -->
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+
+    <!-- Custom CSS for the '3 Col Portfolio' Template -->
+    <link href="css/3-col-portfolio.css" rel="stylesheet">
   </head>
 
   <body>
