--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
     
     <link rel="icon" type="image/jpg" href="images/racc.jpg"/>
     <title>Raccoon Formality</title>
+<!-- HTML Meta Tags -->
+<title>Raccoon Formality</title>
+<meta name="description" content="game developer">
 
+<!-- Google / Search Engine Tags -->
+<meta itemprop="name" content="Raccoon Formality">
+<meta itemprop="description" content="game developer">
+<meta itemprop="image" content="https://raccoonformality.com/images/racc.jpg">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://raccoonformality.com">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Raccoon Formality">
+<meta property="og:description" content="game developer">
+<meta property="og:image" content="https://raccoonformality.com/images/racc.jpg">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Raccoon Formality">
+<meta name="twitter:description" content="game developer">
+<meta name="twitter:image" content="https://raccoonformality.com/images/racc.jpg">
+
+<!-- Meta Tags Generated via http://heymeta.com -->
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
 
