--- a/games/index.html
+++ b/games/index.html
@@ -50,7 +50,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a  href="raccoonformality.com"><img style="max-height: 50px;" src="images/biz_racc_crop.png"></a>
+              <a  href="../"><img style="max-height: 50px;" src="images/biz_racc_crop.png"></a>
             </div>
     
             <!-- Collect the nav links, forms, and other content for toggling -->
