--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <p>Hello, my name is Matthew and I have been making games regularly since March 2022 and I am determined to make this hobby of mine something big.</p>
           <h3>Links</h3>
           <ul>
-            <li><a rel="me" href="https://peoplemaking.games/@RaccoonFormality">Mastodon</a></li>
+            <li><a rel="me" href="https://tech.lgbt/@raccoonformality">Mastodon</a></li>
             <li><a rel="me" href="https://raccoon-formality.itch.io/">Games</a></li>
             <li><a rel="me" href="https://www.youtube.com/@raccoon-formality">Youtube</a></li>
             <li><a rel="me" href="https://www.tiktok.com/@RaccoonFormality">TikTok</a></li>
