--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,7 @@
 <img src="https://media.tenor.com/7em4pm1RN5sAAAAC/raccoon-scooter.gif">
+<style>
+html {
+    background-repeat: repeat;
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/LGBTQ%2B_rainbow_flag_Quasar_%22Progress%22_variant.svg/1024px-LGBTQ%2B_rainbow_flag_Quasar_%22Progress%22_variant.svg.png");
+}
+</style>
