--- a/mastodon/index.html
+++ b/mastodon/index.html
@@ -1,3 +1,3 @@
 <script>
-    document.location="https://peoplemaking.games/@RaccoonFormality"
+    document.location="https://tech.lgbt/@raccoonformality"
 </script>
