--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,34 @@
-<img src="https://media.tenor.com/7em4pm1RN5sAAAAC/raccoon-scooter.gif">
+
 <style>
 html {
     background-repeat: repeat;
     background-image: url("https://upload.wikimedia.org/wikipedia/commons/thumb/f/fd/LGBTQ%2B_rainbow_flag_Quasar_%22Progress%22_variant.svg/1024px-LGBTQ%2B_rainbow_flag_Quasar_%22Progress%22_variant.svg.png");
 }
 </style>
+<body>
+
+    <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a  href="../"><img style="max-height: 50px;" src="../images/biz_racc_crop.png"></a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse navbar-ex1-collapse">
+          <ul class="nav navbar-nav">
+            <li><a href="../games/">Games</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="../blog/">Blog</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container -->
+    </nav>
+    <br>
+    <img src="https://media.tenor.com/7em4pm1RN5sAAAAC/raccoon-scooter.gif">
+</body>
