--- a/about/index.html
+++ b/about/index.html
@@ -6,7 +6,7 @@ html {
 }
 </style>
 <body>
-
+<!--
     <nav class="navbar navbar-fixed-top navbar-inverse" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -19,16 +19,16 @@ html {
           <a  href="../"><img style="max-height: 50px;" src="../images/biz_racc_crop.png"></a>
         </div>
 
-        <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav">
             <li><a href="../games/">Games</a></li>
             <li><a href="">About</a></li>
             <li><a href="../blog/">Blog</a></li>
           </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
+        </div>
+      </div>
     </nav>
     <br>
+-->
     <img src="https://media.tenor.com/7em4pm1RN5sAAAAC/raccoon-scooter.gif">
 </body>
