--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
           <div class="col-lg-12">
             <p>Copyright &copy; Raccoon Formality <span id="getCurrentDate"></span></p>
           </div>
+          
           <button style="float:right;" onclick="myFunction()" style="float: right;">Toggle dark mode</button>
+          <div style="float: right; padding-right: 10px;"><img src='https://www.counter12.com/img-ZxY2bZdDW01zz5C4-79.gif' alt='free web counter'><script type='text/javascript' src='https://www.counter12.com/ad.js?id=ZxY2bZdDW01zz5C4'></script></div>
         </div>
       </footer>
       
