--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="row">
 
         <div class="col-md-8">
-          <img class="img-responsive" style="width: 750px; max-height: 500px; object-fit: cover; object-position: 50% 50%;" src="images/funny_image.jpeg">
+          <img class="img-responsive" style="width: 750px; max-height: 500px; object-fit: cover; object-position: 50% 50%;" src="images/promo.gif">
         </div>
 
         <div class="col-md-4">
