--- a/index.html
+++ b/index.html
@@ -166,11 +166,20 @@
 
       </div>
       -->
+
     </div><!-- /.container -->
 
     <div class="container">
 
       <hr>
+
+      <div class="row text-center">
+        <a href="https://raccoon-formality.itch.io/beta-truck">https://raccoon-formality.itch.io/beta-truck</a><br><br>
+
+        <p>
+        password:<br>
+        SSB0cmllZCBoYXJkIHRvIGhhdmUgYSBmYXRoZXIKQnV0IGluc3RlYWQgSSBoYWQgYSBkYWQ=</p>
+      </div>
 
       <footer>
         <div class="row">
@@ -179,7 +188,7 @@
           </div>
           
           <button style="float:right;" onclick="myFunction()" style="float: right;">Toggle dark mode</button>
-          <div style="float: right; padding-right: 10px;"><img src='https://www.counter12.com/img-ZxY2bZdDW01zz5C4-79.gif' alt='free web counter'><script type='text/javascript' src='https://www.counter12.com/ad.js?id=ZxY2bZdDW01zz5C4'></script></div>
+          <!-- <div style="float: right; padding-right: 10px;"><img src='https://www.counter12.com/img-ZxY2bZdDW01zz5C4-79.gif' alt='free web counter'><script type='text/javascript' src='https://www.counter12.com/ad.js?id=ZxY2bZdDW01zz5C4'></script></div>-->
         </div>
       </footer>
       
