no more retrospring

--- a/about/index.html
+++ b/about/index.html
@@ -101,7 +101,7 @@
             <li><a rel="me" href="https://raccoon-formality.itch.io/">Games</a></li>
             <li><a rel="me" href="https://www.youtube.com/@raccoon-formality">Youtube</a></li>
             <li><a rel="me" href="https://www.tiktok.com/@RaccoonFormality">TikTok</a></li>
-            <li><a rel="me" href="https://retrospring.net/@Raccoon">Ask Me Anything</a></li>
+            <!--<li><a rel="me" href="https://retrospring.net/@Raccoon">Ask Me Anything</a></li>-->
           </ul>
           <h3>Give me money</h3>
           <ul>
