--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@
       <div class="row">
 
         <div class="col-lg-12">
-          <h1 class="page-header">Raccoon Formality <small></small></h1>
+          <h1 class="page-header">Heavy Trucking<small></small></h1>
         </div>
       </div>
 
       <div class="row">
 
         <div class="col-md-8">
-          <img class="img-responsive" style="width: 750px; max-height: 500px; object-fit: contain; object-position: 50% 50%;" src="images/heavy_trucking.gif">
+          <a href="https://raccoon-formality.itch.io/heavy-trucking"><img class="img-responsive" style="width: 750px; max-height: 500px; object-fit: contain; object-position: 50% 50%;" src="images/heavy_trucking.gif"></a>
         </div>
 
         <div class="col-md-4">
           <h3>About my current project</h3>
-          <p>Heavy Trucking is a trucking simulator for the <a href="https://play.date">Panic Playdate</a> that is supposed to be reminiscent of similar early-90s trucking games. I have been posting frequent updates on my <a href="https://tech.lgbt/@raccoonformality">Mastodon account,</a> and I hope you follow me up to its release on October 5th, 2023.</p>
+          <p>Heavy Trucking is a trucking simulator for the <a href="https://play.date">Panic Playdate</a> that is supposed to be reminiscent of similar early-90s trucking games. It's now out with a demo on <a href="https://raccoon-formality.itch.io/heavy-trucking">itch.io</a> :3</p>
           <h3>Links</h3>
           <ul>
             <li><a rel="me" href="https://tech.lgbt/@raccoonformality">Mastodon</a></li>
