--- a/games/index.html
+++ b/games/index.html
@@ -90,6 +90,12 @@
       <div class="row">
 
         <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/heavy-trucking"><img class="img-responsive" src="images/heavytrucking.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/heavy-trucking">Heavy Trucking</a></h3>
+          <p>Trucking sim for the Panic Playdate reminiscent of similar games from the mid-90s.</p>
+        </div>
+
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/noodles-and-love"><img class="img-responsive" src="images/noodles_and_love.gif" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/noodles-and-love">Noodles & Love</a></h3>
           <p>Gay furry visual novel for the Panic Playdate handheld.</p>
@@ -107,14 +113,14 @@
           <p>Simple breakout clone I made to learn the Playdate SDK and get use to it in preparation for the PlayJam.</p>
         </div>
 
+      </div>
+      <div class="row">
+
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/last-chance"><img class="img-responsive" src="images/last_chance.gif" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/last-chance">Last Chance</a></h3>
           <p>Short game made for the Bullet Hell Game Jam 2023.</p>
         </div>
-
-      </div>
-      <div class="row">
 
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/waterlocket"><img class="img-responsive" src="images/waterlocket.png" width="700px"></a>
@@ -134,14 +140,14 @@
           <p>Get your coffee.</p>
         </div>
 
+      </div>
+      <div class="row">
+
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/bonkers"><img class="img-responsive" src="images/bonkers.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/bonkers">Bonkers</a></h3>
           <p>I made this game in around 2 hours because I was bored.</p>
         </div>
-
-      </div>
-      <div class="row">
 
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/need-not-you"><img class="img-responsive" src="images/need_not_you.png" width="700px"></a>
@@ -161,14 +167,14 @@
           <p>I made this game because I was angry.</p>
         </div>
 
+      </div>
+      <div class="row">
+
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/escape-the-date"><img class="img-responsive" src="images/escape_the_date.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/escape-the-date">Escape The Date</a></h3>
           <p>A bullet hell dating sim.</p>
         </div>
-
-      </div>
-      <div class="row">
 
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/slime-jumper"><img class="img-responsive" src="images/slime_jumper.png" width="700px"></a>
