update to add Parking Ticket Mayhem

--- a/games/index.html
+++ b/games/index.html
@@ -90,6 +90,12 @@
       <div class="row">
 
         <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/parking-ticket-mayhem"><img class="img-responsive" src="images/parkingTicketMayhem.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">Parking Ticket Mayhem</a></h3>
+          <p>Digital rage room about getting a parking ticket.</p>
+        </div>
+
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/heavy-trucking"><img class="img-responsive" src="images/heavytrucking.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/heavy-trucking">Heavy Trucking</a></h3>
           <p>Trucking sim for the Panic Playdate reminiscent of similar games from the mid-90s.</p>
@@ -107,14 +113,14 @@
           <p>Simple game I made for the PlayJam.</p>
         </div>
 
+      </div>
+      <div class="row">
+
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/crankout"><img class="img-responsive" src="images/crankout.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/crankout">CrankOut</a></h3>
           <p>Simple breakout clone I made to learn the Playdate SDK and get use to it in preparation for the PlayJam.</p>
         </div>
-
-      </div>
-      <div class="row">
 
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/last-chance"><img class="img-responsive" src="images/last_chance.gif" width="700px"></a>
@@ -134,14 +140,14 @@
           <p>You must go to a nearby village to get everything you can.</p>
         </div>
 
+      </div>
+      <div class="row">
+
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/get-your-coffee"><img class="img-responsive" src="images/get_your_coffee.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/get-your-coffee">Get Your Coffee</a></h3>
           <p>Get your coffee.</p>
         </div>
-
-      </div>
-      <div class="row">
 
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/bonkers"><img class="img-responsive" src="images/bonkers.png" width="700px"></a>
@@ -161,14 +167,16 @@
           <p>A short romance story about two men on a business trip.</p>
         </div>
 
+        
+
+      </div>
+      <div class="row">
+
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/angry-crab"><img class="img-responsive" src="images/angry_crab.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/angry-crab">Angry Crab</a></h3>
           <p>I made this game because I was angry.</p>
         </div>
-
-      </div>
-      <div class="row">
 
         <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/escape-the-date"><img class="img-responsive" src="images/escape_the_date.png" width="700px"></a>
