--- a/index.html
+++ b/index.html
@@ -123,6 +123,12 @@
       <div class="row">
 
         <div class="col-md-3 portfolio-item">
+          <a href="https://raccoon-formality.itch.io/parking-ticket-mayhem"><img class="img-responsive" src="images/parkingTicketMayhem.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/parking-ticket-mayhem">Parking Ticket Mayhem</a></h3>
+          <p>Digital rage room about getting a parking ticket.</p>
+        </div>
+
+        <div class="col-md-3 portfolio-item">
           <a href="https://raccoon-formality.itch.io/noodles-and-love"><img class="img-responsive" src="images/noodles_and_love.gif" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/noodles-and-love">Noodles & Love</a></h3>
           <p>Gay furry visual novel for the Panic Playdate handheld.</p>
@@ -138,12 +144,6 @@
           <a href="https://raccoon-formality.itch.io/need-not-you"><img class="img-responsive" src="images/need_not_you.png" width="700px"></a>
           <h3><a href="https://raccoon-formality.itch.io/need-not-you">Need Not You</a></h3>
           <p>Your love means nothing and there are no secrets.</p>
-        </div>
-
-        <div class="col-md-3 portfolio-item">
-          <a href="https://raccoon-formality.itch.io/glass-half-full"><img class="img-responsive" src="images/glass_half_full.gif" width="700px"></a>
-          <h3><a href="https://raccoon-formality.itch.io/glass-half-full">Glass Half Full</a></h3>
-          <p>A short romance story about two men on a business trip.</p>
         </div>
 
       </div>
