--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
         </div>
 
         <div class="col-md-3 portfolio-item">
-          <a href="https://raccoon-formality.itch.io/noodles-and-love"><img class="img-responsive" src="images/noodles_and_love.gif" width="700px"></a>
-          <h3><a href="https://raccoon-formality.itch.io/noodles-and-love">Noodles & Love</a></h3>
-          <p>Gay furry visual novel for the Panic Playdate handheld.</p>
+          <a href="https://raccoon-formality.itch.io/heavy-trucking"><img class="img-responsive" src="images/heavytrucking.png" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/heavy-trucking">Heavy Trucking</a></h3>
+          <p>Trucking sim for the Panic Playdate reminiscent of similar games from the mid-90s.</p>
         </div>
 
         <div class="col-md-3 portfolio-item">
-          <a href="https://raccoon-formality.itch.io/waterlocket"><img class="img-responsive" src="images/waterlocket.png" width="700px"></a>
-          <h3><a href="https://raccoon-formality.itch.io/waterlocket">Waterlocket</a></h3>
-          <p>A short game demo I made to learn the complexities of 3D gamedev.</p>
+          <a href="https://raccoon-formality.itch.io/noodles-and-love"><img class="img-responsive" src="images/noodles_and_love.gif" width="700px"></a>
+          <h3><a href="https://raccoon-formality.itch.io/noodles-and-love">Noodles & Love</a></h3>
+          <p>Gay furry visual novel for the Panic Playdate handheld.</p>
         </div>
 
         <div class="col-md-3 portfolio-item">
